<resources>
    <string name="app_name">English Words</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <string name="title_search_settings">Search</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_randomize_words">Show words in random sequence?</string>
    <string name="pref_description_randomize_words">Words will be shuffled on application start
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>




    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>select_section
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="button_next">Next</string>
    <string name="button_prev">Prev</string>
    <string name="button_know_it">I know it</string>

    <string name="lbl_total_words">Total words: </string>
    <string name="lbl_known_words">Known words: </string>
    <string name="lbl_unknown_words">Unknown words: </string>

    <!-- Patterns-->
    <!--<string name="pattern_select_title">Choose pattern</string>-->
    <!--<string name="pattern_concrete_title">Concrete pattern</string>-->
    <!--<string name="pattern_add_title">Add pattern</string>-->

    <!--<string name="select_section">Select section</string>-->



    <!-- Titles section-->
    <string name="title_add_word">Add simple word</string>
    <string name="title_add_verb">Add irregular verb</string>
    <string name="title_add_pattern">Add pattern</string>

    <string name="title_words">Words</string>
    <string name="title_words_unknown">Unknown words</string>
    <string name="title_words_known">Known words</string>
    <string name="title_words_all">All words</string>

    <string name="title_verbs">Irregular verbs</string>
    <string name="title_verbs_unknown">Unknown irregular verbs</string>
    <string name="title_verbs_known">Known irregular verbs</string>
    <string name="title_verbs_all">All irregular verbs</string>

    <string name="title_pattern">Pattern</string>

    <string name="title_pattern_list">Pattern list</string>
    <string name="title_thematic_list">Thematic list</string>
    <string name="title_section_list">Section list</string>

    <string name="title_settings">Settings</string>



    <string name="context_menu_title">Choose action</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>


</resources>

