<?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>


        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/app_bar_main"
            tools:context=".MainActivity"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
            >
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_words_unknown"
                    android:id="@+id/radio_unknown"
                    android:checked="true"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_words_known"
                    android:id="@+id/radio_known"
                    />

                </RadioGroup>
            </LinearLayout>

            <!-- Random and I know it chekboxes-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentRight="true"
                android:padding="10dp"
                >
                <CheckBox
                    android:id="@+id/check_random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Random words"
                    android:checked="true"
                    />

                <CheckBox
                    android:id="@+id/check_known"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I know it"
                    android:checked="true"
                    />
            </LinearLayout>


            <!-- Concrete Words-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerVertical="true"

                >
                <TextView android:text="Original"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_original"
                    android:textSize="24dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:layout_marginBottom="20dp"
                    />

                <TextView android:text="Translate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_translate"
                    android:textSize="24dp"
                    android:textColor="@color/colorRed"
                    android:gravity="center"
                    />

            </LinearLayout>


            <!-- Buttons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right"
                android:padding="10dp"
                android:layout_alignParentBottom="true"
                >

                <Button
                    android:id="@+id/button_prev"
                    android:text="@string/button_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    />

                <Button
                    android:id="@+id/button_next"
                    android:text="@string/button_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    />

                <!-- Statistics -->
                <GridLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:columnCount="2"
                    android:orientation="horizontal"
                    >
                    <!-- Total words-->
                    <TextView
                        android:text="@string/lbl_total_words"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/words_total"
                        android:text="0"
                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <!-- Known Words-->
                    <TextView
                        android:text="@string/lbl_known_words"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/words_known"
                        android:text="0"
                        android:textColor="@color/colorGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <!-- Unknown Words-->
                    <TextView
                        android:text="@string/lbl_unknown_words"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/words_unknown"
                        android:text="0"
                        android:textColor="@color/colorRed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </GridLayout>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_alignParentBottom="true"
                    android:id="@+id/layout_learnt"
                    android:visibility="invisible">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/view_success"
                        android:text="Learnt"
                        android:textAlignment="center"
                        android:textSize="18pt"
                        android:background="@color/colorLightGreen"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>


        </RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
