<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/drawer_layout_irregular"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fitsSystemWindows="true"
tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".MainActivity">

        <android.support.design.widget.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            >

            <android.support.v7.widget.Toolbar
                android:id="@+id/irregular_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:menu="@menu/activity_main_drawer"
                />

        </android.support.design.widget.AppBarLayout>

        <!--<include layout="@layout/content_irregular_verbs" />-->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
            android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:showIn="@layout/activity_irregular_verbs"
            tools:context="ua.com.skident.englishwords.IrregularVerbsActivity"
            android:orientation="vertical"
            >

            <!-- Statistic-->
            <GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:columnCount="2"
                android:orientation="horizontal"
                >
                <!-- Total words-->
                <TextView
                    android:text="@string/lbl_total_words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/view_verbs_total"
                    android:text="0"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!-- Known Words-->
                <TextView
                    android:text="@string/lbl_known_words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/view_verbs_known"
                    android:text="0"
                    android:textColor="@color/colorGreen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <!-- Unknown Words-->
                <TextView
                    android:text="@string/lbl_unknown_words"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/view_verbs_unknown"
                    android:text="0"
                    android:textColor="@color/colorRed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </GridLayout>

            <!-- Random and I know it buttons-->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_alignParentRight="true"
                >
                <CheckBox
                    android:id="@+id/check_random"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Random words"
                    android:checked="true"
                    />

                <CheckBox
                    android:id="@+id/check_known"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="I know it"
                    android:checked="true"
                    />
            </LinearLayout>


            <!-- Concrete Words-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_centerVertical="true"

                >
                <TextView android:text="Verb"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_verb"
                    android:textSize="24dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />

                <TextView android:text="Past simple"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_past_simple"
                    android:textSize="24dp"
                    android:textColor="@color/colorRed"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />


                <TextView android:text="Past participle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_past_participle"
                    android:textSize="24dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    />

                <TextView android:text="Translate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/view_verb_translate"
                    android:textSize="24dp"
                    android:textColor="@color/colorRed"
                    android:gravity="center"
                    />

            </LinearLayout>


            <!-- Buttons-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="10dp"
                android:layout_alignParentBottom="true"
                >

                <Button
                    android:id="@+id/button_prev"
                    android:text="@string/button_prev"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

                <Button
                    android:id="@+id/button_next"
                    android:text="@string/button_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />

            </LinearLayout>
        </RelativeLayout>


    </android.support.design.widget.CoordinatorLayout>


    <android.support.design.widget.NavigationView
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:fitsSystemWindows="true"
    app:headerLayout="@layout/nav_header_main"
    app:menu="@menu/activity_main_drawer"
    />


</android.support.v4.widget.DrawerLayout>
